--- a/ansble.cfg
+++ b/ansble.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory = ./inventory
+inventory = ./inventory/prod.ini
 roles_path = ./roles
+collections_paths = /home/vagrant/.ansible/collections:/usr/share/ansible/collections
 host_key_checking = False
 retry_files_enabled = False
