--- a/roles/add_to_tg/tasks/main.yml
+++ b/roles/add_to_tg/tasks/main.yml
@@ -175,7 +175,7 @@
 
 # Fetch Target Group ARN using TG Name
 - name: "Fetch Target Group ARN from TG name"
-  amazon.aws.elb_target_group_info:
+  amazon.aws.elb_target_group:
     region: "{{ region }}"
     names:
       - "{{ target_group_name }}"
