--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = ./inventory/prod.ini
 roles_path = ./roles
-collections_paths = /home/vagrant/.ansible/collections:/usr/share/ansible/collections
+collections_paths = /home/ec2-user/.ansible/collections:/usr/share/ansible/collections
 host_key_checking = False
 retry_files_enabled = False
