--- a/roles/add_to_tg/tasks/main.yml
+++ b/roles/add_to_tg/tasks/main.yml
@@ -222,7 +222,7 @@
     region: "{{ region }}"
     target_group_arn: "{{ target_group_arn }}"
     target_id: "{{ instance_id }}"
-    port: 80
+    target_port: 80
     state: present
 
 # Register instance for HTTPS
@@ -232,7 +232,7 @@
     region: "{{ region }}"
     target_group_arn: "{{ target_group_arn }}"
     target_id: "{{ instance_id }}"
-    port: 443
+    target_port: 443
     state: present
 
 # Deregister HTTP
@@ -242,7 +242,7 @@
     region: "{{ region }}"
     target_group_arn: "{{ target_group_arn }}"
     target_id: "{{ instance_id }}"
-    port: 80
+    target_port: 80
     state: absent
 
 # Deregister HTTPS
@@ -252,7 +252,7 @@
     region: "{{ region }}"
     target_group_arn: "{{ target_group_arn }}"
     target_id: "{{ instance_id }}"
-    port: 443
+    target_port: 443
     state: absent
 
 # Final summary
